Fix: Safari: patches dropdown's text is too light.

--- a/src/client/styles/main.styl
+++ b/src/client/styles/main.styl
@@ -7,6 +7,13 @@ body,
 h1, h2, h3, h4, h5, h6
 	font-weight: $font-weight
 
+/* Safari renders text lighter */
+{$safari-only}
+	html,
+	body,
+	h1, h2, h3, h4, h5, h6
+		font-weight: $font-weight-safari
+
 html,
 body
 	background-color: black
